<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundblurpurple"
    android:orientation="vertical" >

    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">
        
        <TextView
            android:id="@+id/simulprocess1"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/knnsimulprocess1"
        	android:textColor="#fff"
        	android:textSize="20sp"
        	android:background="#26FFFFFF"
        	android:layout_marginTop="10dp"
        	android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:visibility="invisible"/>
        
        
         <TextView
            android:id="@+id/simulprocess2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/simulprocess1"
        	android:gravity="center"
        	android:text="@string/knnsimulprocess2"
        	android:textColor="#fff"
        	android:textSize="20sp"
        	android:background="#26FFFFFF"
        	android:layout_marginTop="20dp"
        	android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:visibility="invisible"/>
         
          <TextView
            android:id="@+id/simulprocess3"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/simulprocess2"
        	android:gravity="center"
        	android:text="@string/knnsimulprocess3"
        	android:textColor="#fff"
        	android:textSize="20sp"
        	android:background="#26FFFFFF"
        	android:layout_marginTop="20dp"
        	android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:visibility="invisible"/>
          
          <TextView
            android:id="@+id/simulprocess4"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/simulprocess3"
        	android:gravity="center"
        	android:text="@string/knnsimulprocess4"
        	android:textColor="#fff"
        	android:textSize="20sp"
        	android:background="#26FFFFFF"
        	android:layout_marginTop="20dp"
        	android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:visibility="invisible"
            />
          
           <TextView
            android:id="@+id/simulprocess5"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/simulprocess4"
        	android:gravity="center"
        	android:text="@string/knnsimulprocess5"
        	android:textColor="#fff"
        	android:textSize="20sp"
        	android:background="#26FFFFFF"
        	android:layout_marginTop="20dp"
        	android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:visibility="invisible"/>
        
    </RelativeLayout>
    
    <com.capstoneii.iclassify.library.SecretTextView
        android:id="@+id/knnsecrettext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="#26FFFFFF"
        android:layout_centerInParent="true"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="K Nearest Neighbor Simulation"
        android:visibility="visible"/>
    
     <com.capstoneii.iclassify.library.SecretTextView
        android:id="@+id/knnsecretdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/knnsecrettext"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="A Step by step KNN Simulation"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/knnnextbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/knnsecretdesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:background="@drawable/simulnextbt" />

</RelativeLayout>
